# BTLZ-GameServer

./: .gitignore  README.md  joinBattleTest.js  monsterUtils.js  package-lock.json  package.json
btlz_rust/: Cargo.toml
btlz_rust/models/: classes.json  weapons.json
btlz_rust/src/: app_state.rs  handlers.rs  lib.rs  main.rs  models.rs  monster_utils.rs  player_utils.rs  read_models.rs  routes.rs  view_models.rs  zai_functions.rs
btlz_rust/src/benchmarks/: instance_bench.rs
btlz_rust/tests/: count_models_test.rs  test_create_player.rs  test_models.rs  view_models_test.rs
btlz_rust/zai_interface/: Cargo.toml
btlz_rust/zai_interface/src/: accounts.rs  errors.rs  instructions.rs  lib.rs  typedefs.rs
jsAlphaVer/: gameServer.js  modelsTest.js  nodemon.json
jsAlphaVer/models/: classes.json  weapons.json
jsAlphaVer/routes/: admin.js
models/: battles.json
