[package]
name = "btlz_rust"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "instance_bench"
path = "src/benchmarks/instance_bench.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.5"
uuid = { version = "1.7.0", features = ["v4"] }
env_logger = "0.11.3"
tokio = { version = "1.36.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }