[package]
name = "btlz_rust"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "../btlz_rust/zai_interface",
]

[[bin]]
name = "instance_bench"
path = "src/benchmarks/instance_bench.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-client = "1.8"
solana-sdk = "1.8"
solana-program = "1.8"
actix-web = "4.5.1"
actix-service = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.5"
uuid = { version = "1.7.0", features = ["v4"] }
env_logger = "0.11.3"
tokio = { version = "1.36.0", features = ["full", "signal"] }
reqwest = { version = "0.12.2", features = ["json"] }
futures = "0.3"
log = "0.4"
borsh = "1.4.0"
zai_interface = { path = "../btlz_rust/zai_interface/" } 