[package]
name = "zai_interface"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "zai_interface"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
solana-program = "1.18.0"
solana-client = "1.8"
solana-sdk = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.5"
uuid = { version = "1.7.0", features = ["v4"] }
env_logger = "0.11.3"
tokio = { version = "1.36.0", features = ["full", "signal"] }
reqwest = { version = "0.12.2", features = ["json"] }
futures = "0.3"
log = "0.4"
borsh = "1.4.0"
num-derive = "0.4.2"
num-traits = "0.2"